@@ -14,8 +14,12 @@ New features:
 - Added support for serialized matrix multiplications
 (poptorch.serializedMatMul)
 - Add support for POPTORCH_IPU_MODEL_VERSION environment variable.
+<<<<<<< HEAD
 - Added support for torch.cumsum
 - Add support for pipelined / phased / sharded execution.
 - Add PoplarExecutor.compile() to compile the model without executing it.
 - Use sphinx-build to generate the documentation.
 - Use Miniconda as build environment.
+- Optimized torch.matmul implementation with limitations
+    Fused its input 0's batch dimensions with the row dimension
+    to avoid ReduceSum in its backward pass, for performance purpose
